tests/ui/privacy/private-inferred-type-2.stderr
error: type `Priv` is private
  --> $DIR/private-inferred-type-2.rs:17:5
   |
LL |     m::Pub::get_priv;
   |     ^^^^^^^^^^^^^^^^ private type

error: type `Priv` is private
  --> $DIR/private-inferred-type-2.rs:18:5
   |
LL |     m::Pub::static_method;
   |     ^^^^^^^^^^^^^^^^^^^^^ private type

error: type `ext::Priv` is private
  --> $DIR/private-inferred-type-2.rs:19:5
   |
LL |     ext::Pub::static_method;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ private type

error: aborting due to 3 previous errors

